trunk/Software Verification Technology/Spin/Src6.1.0/y.output
Terminals unused in grammar

   MTYPE
   LABEL
   NON_ATOMIC


Grammaire

    0 $accept: program $end

    1 program: units

    2 units: unit
    3      | units unit

    4 unit: proc
    5     | init
    6     | claim
    7     | ltl
    8     | events
    9     | one_decl
   10     | utype
   11     | c_fcts
   12     | ns
   13     | SEMI
   14     | error

   15 $@1: /* vide */

   16 $@2: /* vide */

   17 proc: inst proctype NAME $@1 '(' decl ')' $@2 Opt_priority Opt_enabler body

   18 proctype: PROCTYPE
   19         | D_PROCTYPE

   20 inst: /* vide */
   21     | ACTIVE
   22     | ACTIVE '[' CONST ']'
   23     | ACTIVE '[' NAME ']'

   24 $@3: /* vide */

   25 init: INIT $@3 Opt_priority body

   26 $@4: /* vide */

   27 ltl: LTL optname2 $@4 ltl_body

   28 ltl_body: '{' full_expr OS '}'
   29         | error

   30 $@5: /* vide */

   31 claim: CLAIM optname $@5 body

   32 optname: /* vide */
   33        | NAME

   34 optname2: /* vide */
   35         | NAME

   36 $@6: /* vide */

   37 events: TRACE $@6 body

   38 $@7: /* vide */

   39 utype: TYPEDEF NAME $@7 '{' decl_lst '}'

   40 nm: NAME
   41   | INAME

   42 $@8: /* vide */

   43 ns: INLINE nm '(' $@8 args ')'

   44 c_fcts: ccode
   45       | cstate

   46 cstate: C_STATE STRING STRING
   47       | C_TRACK STRING STRING
   48       | C_STATE STRING STRING STRING
   49       | C_TRACK STRING STRING STRING

   50 ccode: C_CODE
   51      | C_DECL

   52 cexpr: C_EXPR

   53 $@9: /* vide */

   54 $@10: /* vide */

   55 body: '{' $@9 sequence OS $@10 '}'

   56 sequence: step
   57         | sequence MS step

   58 step: one_decl
   59     | XU vref_lst
   60     | NAME ':' one_decl
   61     | NAME ':' XU
   62     | stmnt
   63     | stmnt UNLESS stmnt

   64 vis: /* vide */
   65    | HIDDEN
   66    | SHOW
   67    | ISLOCAL

   68 asgn: /* vide */
   69     | ASGN

   70 one_decl: vis TYPE var_list
   71         | vis UNAME var_list
   72         | vis TYPE asgn '{' nlst '}'

   73 decl_lst: one_decl
   74         | one_decl SEMI decl_lst

   75 decl: /* vide */
   76     | decl_lst

   77 vref_lst: varref
   78         | varref ',' vref_lst

   79 var_list: ivar
   80         | ivar ',' var_list

   81 ivar: vardcl
   82     | vardcl ASGN expr
   83     | vardcl ASGN ch_init

   84 ch_init: '[' CONST ']' OF '{' typ_list '}'

   85 vardcl: NAME
   86       | NAME ':' CONST
   87       | NAME '[' CONST ']'

   88 varref: cmpnd

   89 pfld: NAME

   90 $@11: /* vide */

   91 pfld: NAME $@11 '[' expr ']'

   92 $@12: /* vide */

   93 cmpnd: pfld $@12 sfld

   94 sfld: /* vide */
   95     | '.' cmpnd

   96 stmnt: Special
   97      | Stmnt

   98 $@13: /* vide */

   99 for_pre: FOR '(' $@13 varref

  100 for_post: '{' sequence OS '}'

  101 $@14: /* vide */

  102 Special: varref RCV $@14 rargs

  103 $@15: /* vide */

  104 Special: varref SND $@15 margs

  105 $@16: /* vide */

  106 Special: for_pre ':' expr DOTDOT expr ')' $@16 for_post

  107 @17: /* vide */

  108 Special: for_pre IN varref ')' @17 for_post
  109        | SELECT '(' varref ':' expr DOTDOT expr ')'
  110        | IF options FI

  111 $@18: /* vide */

  112 Special: DO $@18 options OD
  113        | BREAK
  114        | GOTO NAME
  115        | NAME ':' stmnt

  116 Stmnt: varref ASGN full_expr
  117      | varref INCR
  118      | varref DECR

  119 $@19: /* vide */

  120 Stmnt: PRINT '(' STRING $@19 prargs ')'
  121      | PRINTM '(' varref ')'
  122      | PRINTM '(' CONST ')'
  123      | ASSERT full_expr
  124      | ccode

  125 $@20: /* vide */

  126 Stmnt: varref R_RCV $@20 rargs

  127 $@21: /* vide */

  128 Stmnt: varref RCV $@21 LT rargs GT

  129 $@22: /* vide */

  130 Stmnt: varref R_RCV $@22 LT rargs GT

  131 $@23: /* vide */

  132 Stmnt: varref O_SND $@23 margs
  133      | full_expr
  134      | ELSE

  135 $@24: /* vide */

  136 Stmnt: ATOMIC '{' $@24 sequence OS '}'

  137 $@25: /* vide */

  138 Stmnt: D_STEP '{' $@25 sequence OS '}'

  139 $@26: /* vide */

  140 Stmnt: '{' $@26 sequence OS '}'

  141 $@27: /* vide */

  142 $@28: /* vide */

  143 Stmnt: INAME $@27 '(' args ')' $@28 Stmnt

  144 options: option
  145        | option options

  146 $@29: /* vide */

  147 option: SEP $@29 sequence OS

  148 OS: /* vide */
  149   | SEMI

  150 MS: SEMI
  151   | MS SEMI

  152 aname: NAME
  153      | PNAME

  154 expr: '(' expr ')'
  155     | expr '+' expr
  156     | expr '-' expr
  157     | expr '*' expr
  158     | expr '/' expr
  159     | expr '%' expr
  160     | expr '&' expr
  161     | expr '^' expr
  162     | expr '|' expr
  163     | expr GT expr
  164     | expr LT expr
  165     | expr GE expr
  166     | expr LE expr
  167     | expr EQ expr
  168     | expr NE expr
  169     | expr AND expr
  170     | expr OR expr
  171     | expr LSHIFT expr
  172     | expr RSHIFT expr
  173     | '~' expr
  174     | '-' expr
  175     | SND expr
  176     | '(' expr SEMI expr ':' expr ')'

  177 $@30: /* vide */

  178 expr: RUN aname $@30 '(' args ')' Opt_priority
  179     | LEN '(' varref ')'
  180     | ENABLED '(' expr ')'

  181 $@31: /* vide */

  182 expr: varref RCV $@31 '[' rargs ']'

  183 $@32: /* vide */

  184 expr: varref R_RCV $@32 '[' rargs ']'
  185     | varref
  186     | cexpr
  187     | CONST
  188     | TIMEOUT
  189     | NONPROGRESS
  190     | PC_VAL '(' expr ')'
  191     | PNAME '[' expr ']' '@' NAME
  192     | PNAME '[' expr ']' ':' pfld
  193     | PNAME '@' NAME
  194     | PNAME ':' pfld
  195     | ltl_expr

  196 Opt_priority: /* vide */
  197             | PRIORITY CONST

  198 full_expr: expr
  199          | Expr

  200 ltl_expr: expr UNTIL expr
  201         | expr RELEASE expr
  202         | expr WEAK_UNTIL expr
  203         | expr IMPLIES expr
  204         | expr EQUIV expr
  205         | NEXT expr
  206         | ALWAYS expr
  207         | EVENTUALLY expr

  208 Expr: Probe
  209     | '(' Expr ')'
  210     | Expr AND Expr
  211     | Expr AND expr
  212     | expr AND Expr
  213     | Expr OR Expr
  214     | Expr OR expr
  215     | expr OR Expr

  216 Probe: FULL '(' varref ')'
  217      | NFULL '(' varref ')'
  218      | EMPTY '(' varref ')'
  219      | NEMPTY '(' varref ')'

  220 Opt_enabler: /* vide */
  221            | PROVIDED '(' full_expr ')'
  222            | PROVIDED error

  223 basetype: TYPE
  224         | UNAME
  225         | error

  226 typ_list: basetype
  227         | basetype ',' typ_list

  228 args: /* vide */
  229     | arg

  230 prargs: /* vide */
  231       | ',' arg

  232 margs: arg
  233      | expr '(' arg ')'

  234 arg: expr
  235    | expr ',' arg

  236 rarg: varref
  237     | EVAL '(' expr ')'
  238     | CONST
  239     | '-' CONST

  240 rargs: rarg
  241      | rarg ',' rargs
  242      | rarg '(' rargs ')'
  243      | '(' rargs ')'

  244 nlst: NAME
  245     | nlst NAME
  246     | nlst ','


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'%' (37) 159
'&' (38) 160
'(' (40) 17 43 99 109 120 121 122 143 154 176 178 179 180 190 209 216
    217 218 219 221 233 237 242 243
')' (41) 17 43 106 108 109 120 121 122 143 154 176 178 179 180 190
    209 216 217 218 219 221 233 237 242 243
'*' (42) 157
'+' (43) 155
',' (44) 78 80 227 231 235 241 246
'-' (45) 156 174 239
'.' (46) 95
'/' (47) 158
':' (58) 60 61 86 106 109 115 176 192 194
'@' (64) 191 193
'[' (91) 22 23 84 87 91 182 184 191 192
']' (93) 22 23 84 87 91 182 184 191 192
'^' (94) 161
'{' (123) 28 39 55 72 84 100 136 138 140
'|' (124) 162
'}' (125) 28 39 55 72 84 100 136 138 140
'~' (126) 173
error (256) 14 29 222 225
ASSERT (258) 123
PRINT (259) 120
PRINTM (260) 121 122
C_CODE (261) 50
C_DECL (262) 51
C_EXPR (263) 52
C_STATE (264) 46 48
C_TRACK (265) 47 49
RUN (266) 178
LEN (267) 179
ENABLED (268) 180
EVAL (269) 237
PC_VAL (270) 190
TYPEDEF (271) 39
MTYPE (272)
INLINE (273) 43
LABEL (274)
OF (275) 84
GOTO (276) 114
BREAK (277) 113
ELSE (278) 134
SEMI (279) 13 74 149 150 151 176
IF (280) 110
FI (281) 110
DO (282) 112
OD (283) 112
FOR (284) 99
SELECT (285) 109
IN (286) 108
SEP (287) 147
DOTDOT (288) 106 109
ATOMIC (289) 136
NON_ATOMIC (290)
D_STEP (291) 138
UNLESS (292) 63
TIMEOUT (293) 188
NONPROGRESS (294) 189
ACTIVE (295) 21 22 23
PROCTYPE (296) 18
D_PROCTYPE (297) 19
HIDDEN (298) 65
SHOW (299) 66
ISLOCAL (300) 67
PRIORITY (301) 197
PROVIDED (302) 221 222
FULL (303) 216
EMPTY (304) 218
NFULL (305) 217
NEMPTY (306) 219
CONST (307) 22 84 86 87 122 187 197 238 239
TYPE (308) 70 72 223
XU (309) 59 61
NAME (310) 17 23 33 35 39 40 60 61 85 86 87 89 91 114 115 152 191 193
    244 245
UNAME (311) 71 224
PNAME (312) 153 191 192 193 194
INAME (313) 41 143
STRING (314) 46 47 48 49 120
CLAIM (315) 31
TRACE (316) 37
INIT (317) 25
LTL (318) 27
ASGN (319) 69 82 83 116
R_RCV (320) 126 130 184
RCV (321) 102 128 182
O_SND (322) 132
SND (323) 104 175
EQUIV (324) 204
IMPLIES (325) 203
OR (326) 170 213 214 215
AND (327) 169 210 211 212
EVENTUALLY (328) 207
ALWAYS (329) 206
RELEASE (330) 201
WEAK_UNTIL (331) 202
UNTIL (332) 200
NEXT (333) 205
NE (334) 168
EQ (335) 167
LE (336) 166
GE (337) 165
LT (338) 128 130 164
GT (339) 128 130 163
RSHIFT (340) 172
LSHIFT (341) 171
DECR (342) 118
INCR (343) 117
NEG (344)
UMIN (345)
DOT (346)


Non-terminaux, suivis des règles où ils apparaissent

$accept (111)
    à gauche: 0
program (112)
    à gauche: 1, à droite: 0
units (113)
    à gauche: 2 3, à droite: 1 3
unit (114)
    à gauche: 4 5 6 7 8 9 10 11 12 13 14, à droite: 2 3
proc (115)
    à gauche: 17, à droite: 4
$@1 (116)
    à gauche: 15, à droite: 17
$@2 (117)
    à gauche: 16, à droite: 17
proctype (118)
    à gauche: 18 19, à droite: 17
inst (119)
    à gauche: 20 21 22 23, à droite: 17
init (120)
    à gauche: 25, à droite: 5
$@3 (121)
    à gauche: 24, à droite: 25
ltl (122)
    à gauche: 27, à droite: 7
$@4 (123)
    à gauche: 26, à droite: 27
ltl_body (124)
    à gauche: 28 29, à droite: 27
claim (125)
    à gauche: 31, à droite: 6
$@5 (126)
    à gauche: 30, à droite: 31
optname (127)
    à gauche: 32 33, à droite: 31
optname2 (128)
    à gauche: 34 35, à droite: 27
events (129)
    à gauche: 37, à droite: 8
$@6 (130)
    à gauche: 36, à droite: 37
utype (131)
    à gauche: 39, à droite: 10
$@7 (132)
    à gauche: 38, à droite: 39
nm (133)
    à gauche: 40 41, à droite: 43
ns (134)
    à gauche: 43, à droite: 12
$@8 (135)
    à gauche: 42, à droite: 43
c_fcts (136)
    à gauche: 44 45, à droite: 11
cstate (137)
    à gauche: 46 47 48 49, à droite: 45
ccode (138)
    à gauche: 50 51, à droite: 44 124
cexpr (139)
    à gauche: 52, à droite: 186
body (140)
    à gauche: 55, à droite: 17 25 31 37
$@9 (141)
    à gauche: 53, à droite: 55
$@10 (142)
    à gauche: 54, à droite: 55
sequence (143)
    à gauche: 56 57, à droite: 55 57 100 136 138 140 147
step (144)
    à gauche: 58 59 60 61 62 63, à droite: 56 57
vis (145)
    à gauche: 64 65 66 67, à droite: 70 71 72
asgn (146)
    à gauche: 68 69, à droite: 72
one_decl (147)
    à gauche: 70 71 72, à droite: 9 58 60 73 74
decl_lst (148)
    à gauche: 73 74, à droite: 39 74 76
decl (149)
    à gauche: 75 76, à droite: 17
vref_lst (150)
    à gauche: 77 78, à droite: 59 78
var_list (151)
    à gauche: 79 80, à droite: 70 71 80
ivar (152)
    à gauche: 81 82 83, à droite: 79 80
ch_init (153)
    à gauche: 84, à droite: 83
vardcl (154)
    à gauche: 85 86 87, à droite: 81 82 83
varref (155)
    à gauche: 88, à droite: 77 78 99 102 104 108 109 116 117 118
    121 126 128 130 132 179 182 184 185 216 217 218 219 236
pfld (156)
    à gauche: 89 91, à droite: 93 192 194
$@11 (157)
    à gauche: 90, à droite: 91
cmpnd (158)
    à gauche: 93, à droite: 88 95
$@12 (159)
    à gauche: 92, à droite: 93
sfld (160)
    à gauche: 94 95, à droite: 93
stmnt (161)
    à gauche: 96 97, à droite: 62 63 115
for_pre (162)
    à gauche: 99, à droite: 106 108
$@13 (163)
    à gauche: 98, à droite: 99
for_post (164)
    à gauche: 100, à droite: 106 108
Special (165)
    à gauche: 102 104 106 108 109 110 112 113 114 115, à droite:
    96
$@14 (166)
    à gauche: 101, à droite: 102
$@15 (167)
    à gauche: 103, à droite: 104
$@16 (168)
    à gauche: 105, à droite: 106
@17 (169)
    à gauche: 107, à droite: 108
$@18 (170)
    à gauche: 111, à droite: 112
Stmnt (171)
    à gauche: 116 117 118 120 121 122 123 124 126 128 130 132 133
    134 136 138 140 143, à droite: 97 143
$@19 (172)
    à gauche: 119, à droite: 120
$@20 (173)
    à gauche: 125, à droite: 126
$@21 (174)
    à gauche: 127, à droite: 128
$@22 (175)
    à gauche: 129, à droite: 130
$@23 (176)
    à gauche: 131, à droite: 132
$@24 (177)
    à gauche: 135, à droite: 136
$@25 (178)
    à gauche: 137, à droite: 138
$@26 (179)
    à gauche: 139, à droite: 140
$@27 (180)
    à gauche: 141, à droite: 143
$@28 (181)
    à gauche: 142, à droite: 143
options (182)
    à gauche: 144 145, à droite: 110 112 145
option (183)
    à gauche: 147, à droite: 144 145
$@29 (184)
    à gauche: 146, à droite: 147
OS (185)
    à gauche: 148 149, à droite: 28 55 100 136 138 140 147
MS (186)
    à gauche: 150 151, à droite: 57 151
aname (187)
    à gauche: 152 153, à droite: 178
expr (188)
    à gauche: 154 155 156 157 158 159 160 161 162 163 164 165 166
    167 168 169 170 171 172 173 174 175 176 178 179 180 182 184 185
    186 187 188 189 190 191 192 193 194 195, à droite: 82 91 106 109
    154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169
    170 171 172 173 174 175 176 180 190 191 192 198 200 201 202 203
    204 205 206 207 211 212 214 215 233 234 235 237
$@30 (189)
    à gauche: 177, à droite: 178
$@31 (190)
    à gauche: 181, à droite: 182
$@32 (191)
    à gauche: 183, à droite: 184
Opt_priority (192)
    à gauche: 196 197, à droite: 17 25 178
full_expr (193)
    à gauche: 198 199, à droite: 28 116 123 133 221
ltl_expr (194)
    à gauche: 200 201 202 203 204 205 206 207, à droite: 195
Expr (195)
    à gauche: 208 209 210 211 212 213 214 215, à droite: 199 209
    210 211 212 213 214 215
Probe (196)
    à gauche: 216 217 218 219, à droite: 208
Opt_enabler (197)
    à gauche: 220 221 222, à droite: 17
basetype (198)
    à gauche: 223 224 225, à droite: 226 227
typ_list (199)
    à gauche: 226 227, à droite: 84 227
args (200)
    à gauche: 228 229, à droite: 43 143 178
prargs (201)
    à gauche: 230 231, à droite: 120
margs (202)
    à gauche: 232 233, à droite: 104 132
arg (203)
    à gauche: 234 235, à droite: 229 231 232 233 235
rarg (204)
    à gauche: 236 237 238 239, à droite: 240 241 242
rargs (205)
    à gauche: 240 241 242 243, à droite: 102 126 128 130 182 184
    241 242 243
nlst (206)
    à gauche: 244 245 246, à droite: 72 245 246


état 0

    0 $accept: . program $end

    error    décalage et aller à l'état 1
    C_CODE   décalage et aller à l'état 2
    C_DECL   décalage et aller à l'état 3
    C_STATE  décalage et aller à l'état 4
    C_TRACK  décalage et aller à l'état 5
    TYPEDEF  décalage et aller à l'état 6
    INLINE   décalage et aller à l'état 7
    SEMI     décalage et aller à l'état 8
    ACTIVE   décalage et aller à l'état 9
    HIDDEN   décalage et aller à l'état 10
    SHOW     décalage et aller à l'état 11
    ISLOCAL  décalage et aller à l'état 12
    CLAIM    décalage et aller à l'état 13
    TRACE    décalage et aller à l'état 14
    INIT     décalage et aller à l'état 15
    LTL      décalage et aller à l'état 16

    PROCTYPE    réduction par utilisation de la règle 20 (inst)
    D_PROCTYPE  réduction par utilisation de la règle 20 (inst)
    TYPE        réduction par utilisation de la règle 64 (vis)
    UNAME       réduction par utilisation de la règle 64 (vis)

    program   aller à l'état 17
    units     aller à l'état 18
    unit      aller à l'état 19
    proc      aller à l'état 20
    inst      aller à l'état 21
    init      aller à l'état 22
    ltl       aller à l'état 23
    claim     aller à l'état 24
    events    aller à l'état 25
    utype     aller à l'état 26
    ns        aller à l'état 27
    c_fcts    aller à l'état 28
    cstate    aller à l'état 29
    ccode     aller à l'état 30
    vis       aller à l'état 31
    one_decl  aller à l'état 32


état 1

   14 unit: error .

    $défaut  réduction par utilisation de la règle 14 (unit)


état 2

   50 ccode: C_CODE .

    $défaut  réduction par utilisation de la règle 50 (ccode)


état 3

   51 ccode: C_DECL .

    $défaut  réduction par utilisation de la règle 51 (ccode)


état 4

   46 cstate: C_STATE . STRING STRING
   48       | C_STATE . STRING STRING STRING

    STRING  décalage et aller à l'état 33


état 5

   47 cstate: C_TRACK . STRING STRING
   49       | C_TRACK . STRING STRING STRING

    STRING  décalage et aller à l'état 34


état 6

   39 utype: TYPEDEF . NAME $@7 '{' decl_lst '}'

    NAME  décalage et aller à l'état 35


état 7

   43 ns: INLINE . nm '(' $@8 args ')'

    NAME   décalage et aller à l'état 36
    INAME  décalage et aller à l'état 37

    nm  aller à l'état 38


état 8

   13 unit: SEMI .

    $défaut  réduction par utilisation de la règle 13 (unit)


état 9

   21 inst: ACTIVE .
   22     | ACTIVE . '[' CONST ']'
   23     | ACTIVE . '[' NAME ']'

    '['  décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 21 (inst)


état 10

   65 vis: HIDDEN .

    $défaut  réduction par utilisation de la règle 65 (vis)


état 11

   66 vis: SHOW .

    $défaut  réduction par utilisation de la règle 66 (vis)


état 12

   67 vis: ISLOCAL .

    $défaut  réduction par utilisation de la règle 67 (vis)


état 13

   31 claim: CLAIM . optname $@5 body

    NAME  décalage et aller à l'état 40

    $défaut  réduction par utilisation de la règle 32 (optname)

    optname  aller à l'état 41


état 14

   37 events: TRACE . $@6 body

    $défaut  réduction par utilisation de la règle 36 ($@6)

    $@6  aller à l'état 42


état 15

   25 init: INIT . $@3 Opt_priority body

    $défaut  réduction par utilisation de la règle 24 ($@3)

    $@3  aller à l'état 43


état 16

   27 ltl: LTL . optname2 $@4 ltl_body

    NAME  décalage et aller à l'état 44

    $défaut  réduction par utilisation de la règle 34 (optname2)

    optname2  aller à l'état 45


état 17

    0 $accept: program . $end

    $end  décalage et aller à l'état 46


état 18

    1 program: units .
    3 units: units . unit

    error    décalage et aller à l'état 1
    C_CODE   décalage et aller à l'état 2
    C_DECL   décalage et aller à l'état 3
    C_STATE  décalage et aller à l'état 4
    C_TRACK  décalage et aller à l'état 5
    TYPEDEF  décalage et aller à l'état 6
    INLINE   décalage et aller à l'état 7
    SEMI     décalage et aller à l'état 8
    ACTIVE   décalage et aller à l'état 9
    HIDDEN   décalage et aller à l'état 10
    SHOW     décalage et aller à l'état 11
    ISLOCAL  décalage et aller à l'état 12
    CLAIM    décalage et aller à l'état 13
    TRACE    décalage et aller à l'état 14
    INIT     décalage et aller à l'état 15
    LTL      décalage et aller à l'état 16

    $end        réduction par utilisation de la règle 1 (program)
    PROCTYPE    réduction par utilisation de la règle 20 (inst)
    D_PROCTYPE  réduction par utilisation de la règle 20 (inst)
    TYPE        réduction par utilisation de la règle 64 (vis)
    UNAME       réduction par utilisation de la règle 64 (vis)

    unit      aller à l'état 47
    proc      aller à l'état 20
    inst      aller à l'état 21
    init      aller à l'état 22
    ltl       aller à l'état 23
    claim     aller à l'état 24
    events    aller à l'état 25
    utype     aller à l'état 26
    ns        aller à l'état 27
    c_fcts    aller à l'état 28
    cstate    aller à l'état 29
    ccode     aller à l'état 30
    vis       aller à l'état 31
    one_decl  aller à l'état 32


état 19

    2 units: unit .

    $défaut  réduction par utilisation de la règle 2 (units)


état 20

    4 unit: proc .

    $défaut  réduction par utilisation de la règle 4 (unit)


état 21

   17 proc: inst . proctype NAME $@1 '(' decl ')' $@2 Opt_priority Opt_enabler body

    PROCTYPE    décalage et aller à l'état 48
    D_PROCTYPE  décalage et aller à l'état 49

    proctype  aller à l'état 50


état 22

    5 unit: init .

    $défaut  réduction par utilisation de la règle 5 (unit)


état 23

    7 unit: ltl .

    $défaut  réduction par utilisation de la règle 7 (unit)


état 24

    6 unit: claim .

    $défaut  réduction par utilisation de la règle 6 (unit)


état 25

    8 unit: events .

    $défaut  réduction par utilisation de la règle 8 (unit)


état 26

   10 unit: utype .

    $défaut  réduction par utilisation de la règle 10 (unit)


état 27

   12 unit: ns .

    $défaut  réduction par utilisation de la règle 12 (unit)


état 28

   11 unit: c_fcts .

    $défaut  réduction par utilisation de la règle 11 (unit)


état 29

   45 c_fcts: cstate .

    $défaut  réduction par utilisation de la règle 45 (c_fcts)


état 30

   44 c_fcts: ccode .

    $défaut  réduction par utilisation de la règle 44 (c_fcts)


état 31

   70 one_decl: vis . TYPE var_list
   71         | vis . UNAME var_list
   72         | vis . TYPE asgn '{' nlst '}'

    TYPE   décalage et aller à l'état 51
    UNAME  décalage et aller à l'état 52


état 32

    9 unit: one_decl .

    $défaut  réduction par utilisation de la règle 9 (unit)


état 33

   46 cstate: C_STATE STRING . STRING
   48       | C_STATE STRING . STRING STRING

    STRING  décalage et aller à l'état 53


état 34

   47 cstate: C_TRACK STRING . STRING
   49       | C_TRACK STRING . STRING STRING

    STRING  décalage et aller à l'état 54


état 35

   39 utype: TYPEDEF NAME . $@7 '{' decl_lst '}'

    $défaut  réduction par utilisation de la règle 38 ($@7)

    $@7  aller à l'état 55


état 36

   40 nm: NAME .

    $défaut  réduction par utilisation de la règle 40 (nm)


état 37

   41 nm: INAME .

    $défaut  réduction par utilisation de la règle 41 (nm)


état 38

   43 ns: INLINE nm . '(' $@8 args ')'

    '('  décalage et aller à l'état 56


état 39

   22 inst: ACTIVE '[' . CONST ']'
   23     | ACTIVE '[' . NAME ']'

    CONST  décalage et aller à l'état 57
    NAME   décalage et aller à l'état 58


état 40

   33 optname: NAME .

    $défaut  réduction par utilisation de la règle 33 (optname)


état 41

   31 claim: CLAIM optname . $@5 body

    $défaut  réduction par utilisation de la règle 30 ($@5)

    $@5  aller à l'état 59


état 42

   37 events: TRACE $@6 . body

    '{'  décalage et aller à l'état 60

    body  aller à l'état 61


état 43

   25 init: INIT $@3 . Opt_priority body

    PRIORITY  décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 196 (Opt_priority)

    Opt_priority  aller à l'état 63


état 44

   35 optname2: NAME .

    $défaut  réduction par utilisation de la règle 35 (optname2)


état 45

   27 ltl: LTL optname2 . $@4 ltl_body

    $défaut  réduction par utilisation de la règle 26 ($@4)

    $@4  aller à l'état 64


état 46

    0 $accept: program $end .

    $défaut  accepter


état 47

    3 units: units unit .

    $défaut  réduction par utilisation de la règle 3 (units)


état 48

   18 proctype: PROCTYPE .

    $défaut  réduction par utilisation de la règle 18 (proctype)


état 49

   19 proctype: D_PROCTYPE .

    $défaut  réduction par utilisation de la règle 19 (proctype)


état 50

   17 proc: inst proctype . NAME $@1 '(' decl ')' $@2 Opt_priority Opt_enabler body

    NAME  décalage et aller à l'état 65


état 51

   70 one_decl: vis TYPE . var_list
   72         | vis TYPE . asgn '{' nlst '}'

    NAME  décalage et aller à l'état 66
    ASGN  décalage et aller à l'état 67

    $défaut  réduction par utilisation de la règle 68 (asgn)

    asgn      aller à l'état 68
    var_list  aller à l'état 69
    ivar      aller à l'état 70
    vardcl    aller à l'état 71


état 52

   71 one_decl: vis UNAME . var_list

    NAME  décalage et aller à l'état 66

    var_list  aller à l'état 72
    ivar      aller à l'état 70
    vardcl    aller à l'état 71


état 53

   46 cstate: C_STATE STRING STRING .
   48       | C_STATE STRING STRING . STRING

    STRING  décalage et aller à l'état 73

    $défaut  réduction par utilisation de la règle 46 (cstate)


état 54

   47 cstate: C_TRACK STRING STRING .
   49       | C_TRACK STRING STRING . STRING

    STRING  décalage et aller à l'état 74

    $défaut  réduction par utilisation de la règle 47 (cstate)


état 55

   39 utype: TYPEDEF NAME $@7 . '{' decl_lst '}'

    '{'  décalage et aller à l'état 75


état 56

   43 ns: INLINE nm '(' . $@8 args ')'

    $défaut  réduction par utilisation de la règle 42 ($@8)

    $@8  aller à l'état 76


état 57

   22 inst: ACTIVE '[' CONST . ']'

    ']'  décalage et aller à l'état 77


état 58

   23 inst: ACTIVE '[' NAME . ']'

    ']'  décalage et aller à l'état 78


état 59

   31 claim: CLAIM optname $@5 . body

    '{'  décalage et aller à l'état 60

    body  aller à l'état 79


état 60

   55 body: '{' . $@9 sequence OS $@10 '}'

    $défaut  réduction par utilisation de la règle 53 ($@9)

    $@9  aller à l'état 80


état 61

   37 events: TRACE $@6 body .

    $défaut  réduction par utilisation de la règle 37 (events)


état 62

  197 Opt_priority: PRIORITY . CONST

    CONST  décalage et aller à l'état 81


état 63

   25 init: INIT $@3 Opt_priority . body

    '{'  décalage et aller à l'état 60

    body  aller à l'état 82


état 64

   27 ltl: LTL optname2 $@4 . ltl_body

    error  décalage et aller à l'état 83
    '{'    décalage et aller à l'état 84

    ltl_body  aller à l'état 85


état 65

   17 proc: inst proctype NAME . $@1 '(' decl ')' $@2 Opt_priority Opt_enabler body

    $défaut  réduction par utilisation de la règle 15 ($@1)

    $@1  aller à l'état 86


état 66

   85 vardcl: NAME .
   86       | NAME . ':' CONST
   87       | NAME . '[' CONST ']'

    '['  décalage et aller à l'état 87
    ':'  décalage et aller à l'état 88

    $défaut  réduction par utilisation de la règle 85 (vardcl)


état 67

   69 asgn: ASGN .

    $défaut  réduction par utilisation de la règle 69 (asgn)


état 68

   72 one_decl: vis TYPE asgn . '{' nlst '}'

    '{'  décalage et aller à l'état 89


état 69

   70 one_decl: vis TYPE var_list .

    $défaut  réduction par utilisation de la règle 70 (one_decl)


état 70

   79 var_list: ivar .
   80         | ivar . ',' var_list

    ','  décalage et aller à l'état 90

    $défaut  réduction par utilisation de la règle 79 (var_list)


état 71

   81 ivar: vardcl .
   82     | vardcl . ASGN expr
   83     | vardcl . ASGN ch_init

    ASGN  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 81 (ivar)


état 72

   71 one_decl: vis UNAME var_list .

    $défaut  réduction par utilisation de la règle 71 (one_decl)


état 73

   48 cstate: C_STATE STRING STRING STRING .

    $défaut  réduction par utilisation de la règle 48 (cstate)


état 74

   49 cstate: C_TRACK STRING STRING STRING .

    $défaut  réduction par utilisation de la règle 49 (cstate)


état 75

   39 utype: TYPEDEF NAME $@7 '{' . decl_lst '}'

    HIDDEN   décalage et aller à l'état 10
    SHOW     décalage et aller à l'état 11
    ISLOCAL  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 64 (vis)

    vis       aller à l'état 31
    one_decl  aller à l'état 92
    decl_lst  aller à l'état 93


état 76

   43 ns: INLINE nm '(' $@8 . args ')'

    C_EXPR       décalage et aller à l'état 94
    RUN          décalage et aller à l'état 95
    LEN          décalage et aller à l'état 96
    ENABLED      décalage et aller à l'état 97
    PC_VAL       décalage et aller à l'état 98
    TIMEOUT      décalage et aller à l'état 99
    NONPROGRESS  décalage et aller à l'état 100
    CONST        décalage et aller à l'état 101
    NAME         décalage et aller à l'état 102
    PNAME        décalage et aller à l'état 103
    SND          décalage et aller à l'état 104
    EVENTUALLY   décalage et aller à l'état 105
    ALWAYS       décalage et aller à l'état 106
    NEXT         décalage et aller à l'état 107
    '-'          décalage et aller à l'état 108
    '~'          décalage et aller à l'état 109
    '('          décalage et aller à l'état 110

    $défaut  réduction par utilisation de la règle 228 (args)

    cexpr     aller à l'état 111
    varref    aller à l'état 112
    pfld      aller à l'état 113
    cmpnd     aller à l'état 114
    expr      aller à l'état 115
    ltl_expr  aller à l'état 116
    args      aller à l'état 117
    arg       aller à l'état 118


état 77

   22 inst: ACTIVE '[' CONST ']' .

    $défaut  réduction par utilisation de la règle 22 (inst)


état 78

   23 inst: ACTIVE '[' NAME ']' .

    $défaut  réduction par utilisation de la règle 23 (inst)


état 79

   31 claim: CLAIM optname $@5 body .

    $défaut  réduction par utilisation de la règle 31 (claim)


état 80

   55 body: '{' $@9 . sequence OS $@10 '}'
